--- a/notebooks/Algo Pärt.ipynb
+++ b/notebooks/Algo Pärt.ipynb
@@ -17,7 +17,7 @@
    "id": "b24ac530-b6c6-4b09-a1f5-eb8788d3dc17",
    "metadata": {},
    "source": [
-    "This notebook summarizes the code needed to algorithmically reconstruct a score for Arvo Pärt's 1977 composition _Summa_ for SATB choir a capella. To keep this notebook short, it does not contain examples illustrating the various steps (other notebook cover cover most steps in more detail). Also, we have moved some 'utility' code to a separate `utils.py` file. This is mostly code required to properly construct a score in music21, which is not our main concern here. Still, the majority of this notebook deals with 'administration': organizing all material so that we can generate a score. The amount of code needed to construct the melodies, our central interest, is very small: most work is done under the hood, in the `tintanibulli` package."
+    "This notebook summarizes the code needed to algorithmically reconstruct a score for Arvo Pärt's 1977 composition _Summa_ for SATB choir a capella. To keep this notebook short, it does not contain examples illustrating the various steps (other notebook cover cover most steps in more detail). Also, we have moved some 'utility' code to a separate `utils.py` file. This is mostly code required to properly construct a score in music21, which is not our main concern here. Still, the majority of this notebook deals with 'administration': organizing all material so that we can generate a score. The amount of code needed to construct the melodies, our central interest, is very small: most work is done under the hood, in the `tintannibulli` package."
    ]
   },
   {
@@ -40,7 +40,8 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
-    "from tintanibullipy import MelodicSpace, TintanibulliSpace\n",
+    "from tintanibullipy import MelodicSpace\n",
+    "from tintanibullipy import TintanibulliSpace as TintannibuliSpace\n",
     "from tintanibullipy import glue, rotate_tail, concatenate\n",
     "from tintanibullipy import StepProcess, OrnamentProcess, TailRotatedPatternProcess\n",
     "\n",
@@ -123,7 +124,7 @@
    "source": [
     "# The melodic spaces\n",
     "M = MelodicSpace(MinorScale('E4'))\n",
-    "T = TintanibulliSpace(Chord(['E4', 'G4', 'B4']))"
+    "T = TintannibuliSpace(Chord(['E4', 'G4', 'B4']))"
    ]
   },
   {
@@ -224,7 +225,7 @@
    "id": "9a2e078d-c0c9-4072-9b94-eb50741c0d5a",
    "metadata": {},
    "source": [
-    "The tintanibulli voices, tenor and soprano, are constructed using what we called a _Step (Tintanibulli) Process_. This process moves around stepwise in the tintanibulli space (i.e., to neighbouring traid notes), while maintaining at least a certain tintanibulli position with respect to the melody. For the soprano that is at least position 2, for the tenor at least position 1."
+    "The tintannibulli voices, tenor and soprano, are constructed using what we called a _Step (Tintannibulli) Process_. This process moves around stepwise in the tintannibulli space (i.e., to neighbouring traid notes), while maintaining at least a certain tintannibulli position with respect to the melody. For the soprano that is at least position 2, for the tenor at least position 1."
    ]
   },
   {
@@ -234,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tintanibulli voices\n",
+    "# tintannibulli voices\n",
     "soprano = StepProcess(T, position=2)(alto)\n",
     "tenor = StepProcess(T, position=1)(bass, p0=2)"
    ]
@@ -265,7 +266,7 @@
    "id": "7abeba90-6460-488a-be2e-0b3f19b09fea",
    "metadata": {},
    "source": [
-    "The ornamentation is perhaps the hardest part of Summa. We have chosen to describe the ornamentation of the tintanibulli and melody voices in two different ways, as two separate tintanibulli processes. For the tenor and soprano that is a so called _ornament process_: this ornaments a note with the previous note if this is not equal to the next note, while keeping within a certain melodic range. The process for the alto and bass is in a way more ad hoc: it basically repeats a pattern of ornamentation for the basic 16 note pattern. Since that pattern is repeated with tail rotation, the tintanibulli process for the ornamentation also has to perform a tail rotation. But in the end, the regularity we have encoded is essentialy repeating a 16-note ornamentation pattern."
+    "The ornamentation is perhaps the hardest part of Summa. We have chosen to describe the ornamentation of the tintannibulli and melody voices in two different ways, as two separate tintannibulli processes. For the tenor and soprano that is a so called _ornament process_: this ornaments a note with the previous note if this is not equal to the next note, while keeping within a certain melodic range. The process for the alto and bass is in a way more ad hoc: it basically repeats a pattern of ornamentation for the basic 16 note pattern. Since that pattern is repeated with tail rotation, the tintannibulli process for the ornamentation also has to perform a tail rotation. But in the end, the regularity we have encoded is essentialy repeating a 16-note ornamentation pattern."
    ]
   },
   {
@@ -393,6 +394,7 @@
    "cell_type": "markdown",
    "id": "89944340-b529-4968-a313-fe166f5fd5ab",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
