--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -1230,7 +1230,7 @@
     "tags": []
    },
    "source": [
-    "## Melody and tintanibulli voices"
+    "## Melody and tintinnabuli voices"
    ]
   },
   {
@@ -1302,8 +1302,8 @@
    },
    "outputs": [],
    "source": [
-    "tintanibulli = ['G2', 'B2', 'E3', 'G3', 'B3', 'E4', 'G4', 'B4', 'E5', 'G5', 'B5']\n",
-    "tintanibulli = np.array([Note(n) for n in tintanibulli])"
+    "tintinnabuli = ['G2', 'B2', 'E3', 'G3', 'B3', 'E4', 'G4', 'B4', 'E5', 'G5', 'B5']\n",
+    "tintinnabuli = np.array([Note(n) for n in tintinnabuli])"
    ]
   },
   {
@@ -1319,13 +1319,13 @@
     "sop = []\n",
     "for ref in alto_pattern + alto_pattern:\n",
     "    if ref.editorial['melisma']: continue\n",
-    "    candidates = np.where(tintanibulli > ref)[0][1:]\n",
+    "    candidates = np.where(tintinnabuli > ref)[0][1:]\n",
     "    if prev_index is not None:\n",
     "        candidates = np.intersect1d(candidates, [prev_index - 1, prev_index, prev_index + 1])\n",
     "        candidates = np.setdiff1d(candidates, [prev_index])\n",
     "        \n",
     "    cur_index = candidates[0]\n",
-    "    cur = tintanibulli[cur_index]\n",
+    "    cur = tintinnabuli[cur_index]\n",
     "    sop.append(cur)\n",
     "    prev_index = cur_index"
    ]
@@ -1391,13 +1391,13 @@
     "ten = []\n",
     "for ref in bass_pattern + bass_pattern + bass_pattern + bass_pattern:\n",
     "    if ref.editorial['melisma']: continue\n",
-    "    candidates = np.where(tintanibulli > ref)[0][0:]\n",
+    "    candidates = np.where(tintinnabuli > ref)[0][0:]\n",
     "    if prev_index is not None:\n",
     "        candidates = np.intersect1d(candidates, [prev_index - 1, prev_index, prev_index + 1])\n",
     "        candidates = np.setdiff1d(candidates, [prev_index])\n",
     "        \n",
     "    cur_index = candidates[0]\n",
-    "    cur = tintanibulli[cur_index]\n",
+    "    cur = tintinnabuli[cur_index]\n",
     "    ten.append(cur)\n",
     "    prev_index = cur_index"
    ]
