--- a/notebooks/Evaluation.ipynb
+++ b/notebooks/Evaluation.ipynb
@@ -154,7 +154,7 @@
     "3. **Duration errors (green).** In the soprano part we see two duration errors: the second note (G4, *-do*) has double the duration of the original, and the third note (B4, *in*) half the duration of the original, but both are otherwise correct. We call these *duration errors*. In this piece, durations are completely determined the melodic voices and ornamentation, which means that duration erros will always be caused by ornament insertions or deletions. In the exaple, the insertion error causes the first duration error, and the deletion error causes the second duration error. And so in a way, counting both insertions/deletions *and* duration errors means you are counting errors twice. For that reason we will largely ignore duration errors.\n",
     "4. **Pitch errors (orange, not shown).** Finally, it could be that a note has the wrong pitch, although that is not the case in this example.\n",
     "\n",
-    "In the example, the ornament insertions and deletions where in a melody voice, but they of course also appear in tintanibulli voices. In measure two, the tenor part for example has an ornament insertion and deletion:"
+    "In the example, the ornament insertions and deletions where in a melody voice, but they of course also appear in tintinnabuli voices. In measure two, the tenor part for example has an ornament insertion and deletion:"
    ]
   },
   {
