--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -17,7 +17,7 @@
    "id": "15904f8d-7948-4f13-b907-13bc6c1e9177",
    "metadata": {},
    "source": [
-    "**In this tutorial we go through our reconstruction of _Summa_ in a bit more detail. Additional code examples and figures illustrate how the different steps work, and hopefully also show how to attempt recomposing other works by Pärt algorithmically. We rely on our own implementation of some tintanibulli concepts: `tintanibullipy`. This allows us to give a fairly concise implementation of _Summa_, as is clearer from the 'Algo Pärt' notebook, which is essentially a condensed version of this tutorial.**"
+    "**In this tutorial we go through our reconstruction of _Summa_ in a bit more detail. Additional code examples and figures illustrate how the different steps work, and hopefully also show how to attempt recomposing other works by Pärt algorithmically. We rely on our own implementation of some tintinnabuli concepts: `tintinnabulipy`. This allows us to give a fairly concise implementation of _Summa_, as is clearer from the 'Algo Pärt' notebook, which is essentially a condensed version of this tutorial.**"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "sys.path.append('../')\n",
     "\n",
     "from notebooks.utils import *\n",
-    "from tintanibullipy import *"
+    "from tintinnabulipy import *"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "tags": []
    },
    "source": [
-    "## 1. Basic Tintanibullipy"
+    "## 1. Basic Tintinnabulipy"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "id": "9697d21c-f7d7-454e-a600-fce6ca3a5e50",
    "metadata": {},
    "source": [
-    "First we cover some basic examples that illustrate how our music21 tintanibulli framework works."
+    "First we cover some basic examples that illustrate how our music21 tintinnabuli framework works."
    ]
   },
   {
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "M = MelodicSpace(MinorScale('E2'))\n",
-    "T = TintanibulliSpace(Chord('E2 G2 B2'))"
+    "T = TintinnabuliSpace(Chord('E2 G2 B2'))"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "id": "56e05900-72cc-49aa-a662-ac8fc77987a5",
    "metadata": {},
    "source": [
-    "All this also works for the tintanibulli space: that is also a pitch space, but one that only consists of triad notes:"
+    "All this also works for the tintinnabuli space: that is also a pitch space, but one that only consists of triad notes:"
    ]
   },
   {
@@ -373,7 +373,7 @@
     "T.plot(T.sequence('G3', 8), 'o-', c='C1')\n",
     "T.grid()\n",
     "despine()\n",
-    "title('Tintanibulli sequence in T-space')"
+    "title('Tintinnabuli sequence in T-space')"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "source": [
     "plt.figure(figsize=cm2inch(5, 4))\n",
     "M.plot(M.sequence('G3', 8), 'o-', c='C0', label='melody sequence')\n",
-    "M.plot(T.sequence('G3', 8), 'o-', c='C1', label='tintanibulli sequence')\n",
+    "M.plot(T.sequence('G3', 8), 'o-', c='C1', label='tintinnabuli sequence')\n",
     "M.grid()\n",
     "despine()\n",
     "plt.legend()\n",
@@ -595,7 +595,7 @@
     "tags": []
    },
    "source": [
-    "## 3. Tintanibulli voices"
+    "## 3. Tintinnabuli voices"
    ]
   },
   {
@@ -603,11 +603,11 @@
    "id": "d117c14c-19eb-40d8-892a-85de042c7f6f",
    "metadata": {},
    "source": [
-    "In works of Pärt it is common to find that the relation between an M-voice and a T-voice is completely fixed: each pitch in the M-voice corresponds to a pitch in the T-voice. In _Summa_ we find more complex relations, that may involve other melody notes as well. We call these _tintanibulli processes_. They generally define a sequence of tintanibulli notes $(t_1, \\dots, t_i, \\dots, t_N)$ by some function $X$ as\n",
+    "In works of Pärt it is common to find that the relation between an M-voice and a T-voice is completely fixed: each pitch in the M-voice corresponds to a pitch in the T-voice. In _Summa_ we find more complex relations, that may involve other melody notes as well. We call these _tintinnabuli processes_. They generally define a sequence of tintinnabuli notes $(t_1, \\dots, t_i, \\dots, t_N)$ by some function $X$ as\n",
     "\\begin{align}\n",
     "t_{i+1} = X\\bigl((t_1, \\dots, t_i), \\; (m_1, \\dots, m_N)\\bigr).\n",
     "\\end{align}\n",
-    "We give some examples of tintanibulli processes here."
+    "We give some examples of tintinnabuli processes here."
    ]
   },
   {
@@ -625,7 +625,7 @@
    "id": "082ac7e2-3603-449e-b543-2e5ae7538584",
    "metadata": {},
    "source": [
-    "First a constant process, which simply returns the tintanibulli note in $p$-th position all the time."
+    "First a constant process, which simply returns the tintinnabuli note in $p$-th position all the time."
    ]
   },
   {
@@ -883,7 +883,7 @@
     "for ax in axs:\n",
     "    ax.set_xticks([])\n",
     "    \n",
-    "plt.savefig('../figures/tintanibulli-processes/tintanibulli-processes-raw.pdf')"
+    "plt.savefig('../figures/tintinnabuli-processes/tintinnabuli-processes-raw.pdf')"
    ]
   },
   {
@@ -904,7 +904,7 @@
    "outputs": [],
    "source": [
     "M = MelodicSpace(MinorScale('E4'))\n",
-    "T = TintanibulliSpace(Chord(['E4', 'G4', 'B4']))\n",
+    "T = TintinnabuliSpace(Chord(['E4', 'G4', 'B4']))\n",
     "alto_pattern = glue(M.mode2(6), M.mode4(6), M.mode1(2), M.mode3(2))[:-1]\n",
     "repetitions = [rotate_tail(alto_pattern, i) for i in range(16)]\n",
     "alto = concatenate(*repetitions)\n",
@@ -985,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class OrnamentProcess2(TintanibulliProcess):\n",
+    "class OrnamentProcess2(TintinnabuliProcess):\n",
     "    def __init__(self, T, min_pitch, max_pitch):\n",
     "        self.min_pitch = Pitch(min_pitch)\n",
     "        self.max_pitch = Pitch(max_pitch)\n",
@@ -1017,7 +1017,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n"
      ]
     },
@@ -1085,7 +1085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n"
      ]
     },
@@ -1151,9 +1151,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n",
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n"
      ]
     },
@@ -1223,9 +1223,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n",
-      "../tintanibullipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
+      "../tintinnabulipy/spaces.py:423: MatplotlibDeprecationWarning: Case-insensitive properties were deprecated in 3.3 and support will be removed two minor releases later\n",
       "  return ax.plot(xs, self.step(melody), *args, **kwargs)\n"
      ]
     },
