--- a/summa/notebooks/Textual structure.ipynb
+++ b/summa/notebooks/Textual structure.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "bafb78d3-298c-47f2-8c9d-8edc6d41b0d9",
    "metadata": {},
    "outputs": [],
@@ -31,47 +31,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "bf7844ba-f84c-41bb-8da6-ddfc4cb499d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load and segment the text of the Credo\n",
-    "with open('credo.txt', 'r') as file:\n",
+    "with open('../credo.txt', 'r') as file:\n",
     "    credo = file.read()\n",
     "syllables = syllabify(credo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "04cfcd89-df49-458c-85d5-ab988feda316",
+   "execution_count": 3,
+   "id": "052e2c47-9e86-4441-a4ef-dfa0e2f78a1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Structure of the piece\n",
     "syllables_per_measure = [7, 9, 7] * 16\n",
-    "divisi = ['SA', 'SATB', 'TB', 'TB', 'SATB', 'SA'] * 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "052e2c47-9e86-4441-a4ef-dfa0e2f78a1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "divisi = ['SA', 'SATB', 'TB', 'TB', 'SATB', 'SA'] * 8\n",
+    "\n",
     "# Final bars\n",
     "syllables_per_measure[-1] = 4\n",
     "syllables_per_measure.append(1)\n",
     "divisi.append('SATB')\n",
     "\n",
-    "assert sum(syllables_per_measure) == len(SYLLABLES)"
+    "assert sum(syllables_per_measure) == len(syllables)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "3e60323c-a0ca-425c-a963-dbfe6f9b412c",
    "metadata": {},
    "outputs": [
@@ -79,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sec Bar Sylls Divisi  Text\n",
+      "Sec Bar Sylls divisi  Text\n",
       "——————————————————————————————————————————————————————————————————————\n",
       "\\framebox{\\tiny1}\n",
       "\t&1  &\\textsc{sa}   &7 &Cre-  &do    &in    &u-    &num   &de-   &um,   \\\\\n",
@@ -158,7 +150,7 @@
     "pos = np.cumsum(syllables_per_measure).tolist()\n",
     "for m, (length, divisi, start, end) in enumerate(\n",
     "        zip(syllables_per_measure, divisi, [0] + pos, pos)):\n",
-    "    measure = sep.join([f\"{s.replace('- ', '-'): <6}\" for s in SYLLABLES[start:end]])\n",
+    "    measure = sep.join([f\"{s.replace('- ', '-'): <6}\" for s in syllables[start:end]])\n",
     "    rehearsal = f'\\\\framebox{{\\\\tiny{m // 3 + 1}}}\\n' if m % 3 == 0 else ''\n",
     "    divisi = f'\\\\textsc{{{divisi.lower()}}}'\n",
     "    print(f'{rehearsal: <3}\\t{sep}{m+1: <2} {sep}{divisi: <13} {sep}{length} {sep}{measure}\\\\\\\\')"
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "72de1967-fc2b-4cf7-8df5-97a6f224c2e5",
    "metadata": {},
    "outputs": [
@@ -188,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +194,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ab304df62f8a307149c835919527775a6f86fdf6ed418b5d53e2b9888e84b7f1"
+   }
   }
  },
  "nbformat": 4,
